# pokemon-game

./: CMakeLists.txt  README.md  run.sh
assets/: game.xml  level1.tmx  map1.tmx
src/: Background.cpp  Background.h  Camera.cpp  Camera.h  Card.cpp  Card.h  CollisionManager.cpp  CollisionManager.h  DuelState.cpp  DuelState.h  Game.cpp  Game.h  GameObject.h  GameObjectFactory.cpp  GameObjectFactory.h  GameState.h  GameStateMachine.cpp  GameStateMachine.h  InputHandler.cpp  InputHandler.h  Layer.h  Level.cpp  Level.h  LevelParser.cpp  LevelParser.h  LoaderParams.h  MainMenuState.cpp  MainMenuState.h  MenuButton.cpp  MenuButton.h  MenuState.cpp  MenuState.h  NPC.cpp  NPC.h  Npc.cpp  Npc.h  ObjectLayer.cpp  ObjectLayer.h  OverworldState.cpp  OverworldState.h  (+14 more)
